--- a/ProgressBar/index.html
+++ b/ProgressBar/index.html
@@ -17,7 +17,7 @@
         </div>
         
 
-        <button class="butt" id="prev" disabled>Previous</button>
+        <button class="butt" id="prev">Previous</button>
         <button class="butt" id="next">Next</button>
         
     </div>
